[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quotemux-packages"
version = "0.1.0"
description = "QuoteMux source packages"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["quotemux_packages", "quotemux_packages.akshare", "quotemux_packages.efinance", "quotemux_packages.mootdx", "quotemux_packages.opentdx", "quotemux_packages.tushare"]
package-dir = {"quotemux_packages" = "packages"}

[tool.setuptools.package-data]
quotemux_packages = ["py.typed"]
"quotemux_packages.akshare" = ["quotemux_package.json"]
"quotemux_packages.efinance" = ["quotemux_package.json"]
"quotemux_packages.mootdx" = ["quotemux_package.json"]
"quotemux_packages.opentdx" = ["quotemux_package.json"]
"quotemux_packages.tushare" = ["quotemux_package.json"]
